Update dependencies, avoid deprecated APIs